[#8] Resolve code style bug on mobile and change blockquote style

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -15,14 +15,6 @@
     width: 15px;
 }
 
-
-.code {
-	background: #282a36; 
-	color: white; 
-	padding: 15px; 
-	font-size: 15px;
-}
-
 @media screen and (min-width: 740px) {
     .big_img {
         max-width: 740px;
